[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Crabby.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerHealthLabel.gd" type="Script" id=5]
[ext_resource path="res://BossHealthLabel.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )

[node name="Crabby" parent="." instance=ExtResource( 3 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.88053, -8.80986 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PlayerHealthLabel" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
text = "HP: 3"
script = ExtResource( 5 )

[node name="BossHealthLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -101.0
margin_bottom = 15.0
text = "Boss HP: 3"
script = ExtResource( 6 )

[connection signal="hit" from="Player" to="UI/PlayerHealthLabel" method="_on_Player_hit"]
[connection signal="hit" from="Crabby" to="UI/BossHealthLabel" method="_on_Crabby_hit"]
